--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ comtypes==1.1.14
 cowsay==5.0
 cryptography==43.0.3
 cs50==9.2.5
+distro==1.9.0
 dj-rest-auth==6.0.0
 Django==5.0.6
 django-allauth==65.1.0
@@ -53,6 +54,7 @@ idna==3.4
 inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jiter==0.7.0
 kombu==5.4.2
 Markdown==3.4.4
 MarkupSafe==2.1.2
@@ -62,6 +64,7 @@ multidict==6.1.0
 mypy==1.3.0
 mypy-extensions==1.0.0
 networkx==3.4.1
+openai==1.54.3
 outcome==1.2.0
 packaging==23.1
 pathspec==0.11.1
@@ -104,6 +107,7 @@ SQLAlchemy==1.4.46
 sqlparse==0.4.3
 starlette==0.39.2
 termcolor==2.2.0
+tqdm==4.67.0
 trio==0.22.1
 trio-websocket==0.10.3
 typing_extensions==4.12.2
