--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ anyio==4.6.2.post1
 asgiref==3.8.1
 async-timeout==4.0.3
 attrs==23.1.0
+base58==2.1.1
 billiard==4.2.1
 black==23.3.0
 cachetools==5.3.0
@@ -21,6 +22,8 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 comtypes==1.1.14
+construct==2.10.68
+construct-typing==0.5.6
 cowsay==5.0
 cryptography==43.0.3
 cs50==9.2.5
@@ -52,9 +55,11 @@ httplib2==0.21.0
 httpx==0.27.2
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jiter==0.7.0
+jsonalias==0.1.1
 kombu==5.4.2
 Markdown==3.4.4
 MarkupSafe==2.1.2
@@ -70,6 +75,7 @@ packaging==23.1
 pathspec==0.11.1
 Pillow==9.5.0
 platformdirs==3.5.1
+pluggy==1.5.0
 postgres==4.0
 prompt_toolkit==3.0.48
 propcache==0.2.0
@@ -86,6 +92,7 @@ PyJWT==2.9.0
 pyparsing==3.0.9
 pypiwin32==223
 PySocks==1.7.1
+pytest==8.3.3
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-jose==3.3.0
@@ -102,6 +109,8 @@ rsa==4.9
 selenium==4.10.0
 six==1.16.0
 sniffio==1.3.0
+solana==0.35.0
+solders==0.21.0
 sortedcontainers==2.4.0
 SQLAlchemy==1.4.46
 sqlparse==0.4.3
@@ -119,6 +128,7 @@ vine==5.1.0
 watchdog==3.0.0
 wcwidth==0.2.13
 websocket-client==1.6.1
+websockets==11.0.3
 Werkzeug==2.2.3
 wsproto==1.2.0
 yarl==1.16.0
