--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ google-api-core==2.11.0
 google-api-python-client==2.80.0
 google-auth==2.16.2
 google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.58.0
 greenlet==2.0.2
 h11==0.14.0
@@ -69,6 +70,7 @@ multidict==6.1.0
 mypy==1.3.0
 mypy-extensions==1.0.0
 networkx==3.4.1
+oauthlib==3.2.2
 openai==1.54.3
 outcome==1.2.0
 packaging==23.1
@@ -105,11 +107,12 @@ PyYAML==6.0.1
 pyyaml_env_tag==0.1
 redis==5.2.0
 requests==2.28.2
+requests-oauthlib==2.0.0
 rsa==4.9
 selenium==4.10.0
 six==1.16.0
 sniffio==1.3.0
-solana==0.35.0
+solana==0.35.1
 solders==0.21.0
 sortedcontainers==2.4.0
 SQLAlchemy==1.4.46
