--- a/requirements.txt
+++ b/requirements.txt
@@ -27,16 +27,19 @@ construct-typing==0.5.6
 cowsay==5.0
 cryptography==43.0.3
 cs50==9.2.5
+defusedxml==0.7.1
 distro==1.9.0
-dj-rest-auth==6.0.0
+dj-rest-auth==7.0.0
 Django==5.0.6
-django-allauth==65.1.0
+django-allauth==0.57.0
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+dnspython==2.7.0
 docker==6.1.3
 drf-yasg==1.21.8
 ecdsa==0.19.0
+email_validator==2.2.0
 exceptiongroup==1.1.2
 fastapi==0.115.2
 Flask==2.2.3
@@ -44,7 +47,7 @@ frozenlist==1.5.0
 ghp-import==2.1.0
 google-api-core==2.11.0
 google-api-python-client==2.80.0
-google-auth==2.16.2
+google-auth==2.36.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.58.0
@@ -99,6 +102,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.12
+python3-openid==3.2.0
 pyttsx3==2.90
 pytube==15.0.0
 pytz==2024.2
