--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.6",
     "reactflow": "^11.11.4",
