--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,14 +39,17 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.6",
+    "@types/lodash": "^4.17.14",
     "@xyflow/react": "^12.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "debounce": "^2.2.0",
     "embla-carousel-react": "^8.3.1",
     "input-otp": "^1.2.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
