--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==2.9.2
+pydantic-settings==2.7.1
 pydantic_core==2.23.4
 PyJWT==2.9.0
 pyparsing==3.0.9
